# Stronghold-CPP

./: APItest.py  CMakeLists.txt  README.md  folder_tree.txt  tempCodeRunnerFile.py
api/: CMakeLists.txt  Makefile  StrongholdAPI.cpp  StrongholdAPI.h  main_api.cpp
frontend/: index.html
frontend/scripts/: scripts.js
frontend/styles/: styles.css
include/: Archer.h  Lord.h  Maceman.h  Pikeman.h  Player.h  Structure.h  Town.h  Troop.h  TurnManager.h  WoodCamp.h
script/: run_api.bat  run_api_test.bat  run_test.bat
src/: Exception.cpp  Knight.cpp  Lord.cpp  Maceman.cpp  Pikeman.cpp  Player.cpp  Town.cpp  Troop.cpp  TurnManager.cpp  WheatFarm.cpp  WoodCamp.cpp  main.cpp
src/Stronghold++/: Archer.cpp  Exception.h  Knight.h  Makefile  Market.cpp  Market.h  StoneQuarry.cpp  StoneQuarry.h  Stronghold++.sln  Stronghold++.vcxproj  Stronghold++.vcxproj.filters  Structure.cpp  Town.cpp  Troop.cpp  Troop.h  WheatFarm.h  main.cpp
